@@ -23,6 +23,10 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
    * list->simple-bit-vector and simple-bit-vector->list
 
  * mlib: added function map
+ * mlib: added generator related functions and macros
+   * scan
+   * scan-multiple
+   * dogenerator
 
  * fixed backquote expansion:
    e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
